Updated Homework/Tasks 05-60.

--- a/Урок 10-14. Операторы ветвлений/Python - PT14.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT14.html
@@ -120,8 +120,10 @@
       <div class="right-rect">
         <h2>Практическое Задание 14.1</h2>
         <p>Реализуйте программу, которая <span class="hl-text">выводит в консоль меню</span> из двух пунктов:
-          <br>1. Определить чётность числа
-          <br>2. Провести операцию над 2-мя числами
+        <div class="console">
+          <pre><code>1. Определить чётность числа
+2. Провести операцию над 2-мя числами</code></pre>
+        </div>
         </p>
         <p>Затем программа <span class="hl-text">запрашивает ввод выбора с консоли</span>.</p>
         <p>Если выбран <span class="hl-text">первый пункт</span>, то программа <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">определяет его чётность</span>.</p>
@@ -142,8 +144,10 @@
       <div class="right-rect">
         <h2>Практическое Задание 14.2</h2>
         <p>Напишите программу, которая <span class="hl-text">выводит в консоль меню</span> из двух пунктов:
-          <br>1. Положить деньги на счёт
-          <br>2. Снять деньги со счёта
+        <div class="console">
+          <pre><code>1. Положить деньги на счёт
+2. Снять деньги со счёта</code></pre>
+        </div>
         </p>
         <p>Затем программа <span class="hl-text">запрашивает ввод выбора с консоли</span>.</p>
         <p>Если выбран <span class="hl-text">первый пункт</span>, то программа <span class="hl-text">запрашивает ввод суммы с консоли</span>. Если сумма отрицательная, то программа должна <span class="hl-text">вывести в консоль</span> <code><span class="string"><b>"Невозможно положить на счёт отрицательную сумму."</b></span></code>. Если же сумма положительная, то <span class="hl-text">деньги кладутся на счёт</span> и <span class="hl-text">выводится сумма счёта</span>.</p>
