--- a/Урок 15-20. Циклы/Python - PT15.html
+++ b/Урок 15-20. Циклы/Python - PT15.html
@@ -185,8 +185,10 @@
       <div class="right-rect">
         <h2>Практическое Задание 15.5</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Зарегистрировать аккаунт
-          <br>2. Войти
+        <div class="console">
+          <pre><code>1. Зарегистрировать аккаунт
+2. Войти</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span>, программа должна <span class="hl-text">запросить с консоли логин</span> и <span class="hl-text">пароль</span>. Затем <span class="hl-text">вернуться обратно в главное меню</span>.</p>
