--- a/Урок 15-20. Циклы/Python - PT16.html
+++ b/Урок 15-20. Циклы/Python - PT16.html
@@ -182,9 +182,11 @@
       <div class="right-rect">
         <h2>Практическое Задание 16.2</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Найти сумму чисел
-          <br>2. Определить чётность числа
-          <br>3. Завершить программу
+        <div class="console">
+          <pre><code>1. Найти сумму чисел
+2. Определить чётность числа
+3. Завершить программу</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает с консоли два числа</span> и <span class="hl-text">выводит в консоль сумму чисел</span>.</p>
