--- a/Урок 15-20. Циклы/Python - PT18.html
+++ b/Урок 15-20. Циклы/Python - PT18.html
@@ -247,9 +247,11 @@
       <div class="right-rect">
         <h2>Практическое Задание 18.7</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Сменить логин и пароль
-          <br>2. Войти
-          <br>3. Завершить программу
+        <div class="console">
+          <pre><code>1. Сменить логин и пароль
+2. Войти
+3. Завершить программу</code></pre>
+        </div>
         </p>
 
         <p>Выбор <span class="hl-text">пункта 1</span>:
@@ -264,14 +266,15 @@
           <br>— Если логин и пароль верные, то <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Добро пожаловать &ltлогин&gt"</b></span></code> и <span class="hl-text">выводит в консоль меню управления</span>.
         </p>
 
-        <p><span class="hl-text"><b>Меню управления</b></span>:
-          <br>1. Получить данные товара
-          <br>2. Добавить товар
-          <br>3. Изменить товар
-          <br>4. Удалить товар
-          <br>5. Выйти из аккаунта
-          <br>6. Завершить программу
-        </p>
+        <h3>Меню управления:</h3>
+        <div class="console">
+          <pre><code>1. Получить данные товара
+2. Добавить товар
+3. Изменить товар
+4. Удалить товар
+5. Выйти из аккаунта
+6. Завершить программу</code></pre>
+        </div>
 
         <p>Выбор <span class="hl-text">пункта 1</span>-<span class="hl-text">4</span>:
           <br>— Стоят заглушки <span class="hl-text">вывода в консоль</span>
