--- a/Урок 15-20. Циклы/Python - PT19-20.html
+++ b/Урок 15-20. Циклы/Python - PT19-20.html
@@ -124,7 +124,7 @@
           <pre><code>1. Зарегистрироваться
 2. Войти
 3. Завершить программу
-Выберите действие: <span class="input">...</span></code></pre>
+</code></pre>
         </div>
 
         <p>В программе есть две роли - <span class="hl-text">клиент</span> и <span class="hl-text">администратор</span>.</p>
@@ -139,7 +139,7 @@
 2. Магазин
 3. Выйти из аккаунта
 4. Завершить программу
-Выберите действие: <span class="input">...</span></code></pre>
+</code></pre>
         </div>
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает идентификатор клиента</span>, <span class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс аккаунта</span>, а также <span class="hl-text">показывает меню</span>:</p>
         <div class="console">
@@ -153,7 +153,7 @@
 3. Пополнить счёт
 4. Вернуться
 5. Завершить программу
-Выберите действие: <span class="input">...</span></code></pre>
+</code></pre>
         </div>
         <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает <code><span class="number"><b>16</b></span></code>-значный номер карты</span>, <span class="hl-text">месяц</span> и <span class="hl-text">год окончания</span>, <span class="hl-text">CVV/CVC код</span>. Если они совпадают с определёнными данными, то программа <span class="hl-text">запрашивает сумму</span>. В противном случае программа <span class="hl-text">возвращает в меню</span> <code><span class="string"><b>"Мой кабинет"</b></span></code>.</p>
 
@@ -176,7 +176,7 @@
 Ваша корзина:
 - &ltтовар&gt - &ltколичество&gt
 - &ltтовар&gt - &ltколичество&gt
-Выберите действие: <span class="input">...</span></code></pre>
+</code></pre>
         </div>
 
         <p>При выборе товара программа <span class="hl-text">запрашивает количество</span>.</p>
@@ -190,7 +190,7 @@
 2. Магазин
 3. Выйти из аккаунта
 4. Завершить программу
-Выберите действие: <span class="input">...</span></code></pre>
+</code></pre>
         </div>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает идентификатор клиента</span>. Если он верный, то программа <span class="hl-text">показывает имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс</span>, <span class="hl-text">историю покупок выбранного клиента</span>.</p>
@@ -204,7 +204,7 @@
 3. Хлеб - количество: 100, цена: 0.4
 4. Молоко - количество: 0, цена: 2.67
 5. Яйца (10шт) - количество: 30, цена: 2.49
-Выберите действие: <span class="input">...</span></code></pre>
+</code></pre>
         </div>
         <p><span class="hl-text">При выборе товара</span> программа <span class="hl-text">запрашивает новое название</span>, <span class="hl-text">количество</span> и <span class="hl-text">цену</span>. Если вводятся пустые данные, то <span class="hl-text">соответствующая информация не меняется</span>. После этого программа <span class="hl-text">показывает старые данные</span> и <span class="hl-text">новые данные</span>, затем <span class="hl-text">запрашивает подтверждение на изменение</span>.</p>
       </div>
