--- a/Урок 21-27. Строки. Списки/Python - HW26.html
+++ b/Урок 21-27. Строки. Списки/Python - HW26.html
@@ -260,20 +260,24 @@
       <div class="right-rect">
         <h2>Домашнее Задание 26.2</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Зарегистрировать аккаунт
-          <br>2. Войти
-          <br>3. Завершить программу
+        <div class="console">
+          <pre><code>1. Зарегистрировать аккаунт
+2. Войти
+3. Завершить программу</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает с консоли новый логин</span> и <span class="hl-text">пароль</span>. Логин должен попасть <span class="hl-text">в первый список</span>, пароль <span class="hl-text">во второй</span>. Если введённый логин уже присутствует в списке, то <span class="hl-text">программа должна сообщить об этом</span> и <span class="hl-text">снова запросить логин</span>. После этого программа <span class="hl-text">возвращается в меню входа</span>. Организация списков следующая: <span class="hl-text">первый список содержит только логины</span>, а <span class="hl-text">второй список только пароли</span>. Если обратиться по индексу <span class="number"><b>0</b></span> у первого списка, то пароль от полученного логина тоже должен быть <span class="hl-text">по индексу <span class="number"><b>0</b></span> у второго списка</span>.</p>
 
         <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>. Программа должна <span class="hl-text">позволить использовать любой зарегистрированный логин</span> и <span class="hl-text">соответствующий пароль</span>. Если вход успешен, то программа <span class="hl-text">выводит следующее меню</span>:
-          <br>1. Удалить текущий аккаунт
-          <br>2. Изменить логин
-          <br>3. Изменить пароль
-          <br>4. Выйти из аккаунта
-          <br>5. Показать логины и пароли всех аккаунтов
-          <br>6. Завершить программу
+        <div class="console">
+          <pre><code>1. Удалить текущий аккаунт
+2. Изменить логин
+3. Изменить пароль
+4. Выйти из аккаунта
+5. Показать логины и пароли всех аккаунтов
+6. Завершить программу</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа должна <span class="hl-text">запросить с консоли подтверждение удаления</span>. В случае подтверждения, <span class="hl-text">логин</span> и <span class="hl-text">пароль</span>, с помощью которых был произведён вход, должны быть <span class="hl-text">удалены из списков</span>, и программа должна <span class="hl-text">вернуться в меню входа</span>.</p>
@@ -303,13 +307,15 @@
       <div class="right-rect">
         <h2>Домашнее Задание 26.4</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Показать список
-          <br>2. Ввести новый список студентов
-          <br>3. Добавить студентов
-          <br>4. Удалить студента по индексу
-          <br>5. Изменить студента по индексу
-          <br>6. Получить индекс по имени
-          <br>7. Получить список студентов по первой букве
+        <div class="console">
+          <pre><code>1. Показать список
+2. Ввести новый список студентов
+3. Добавить студентов
+4. Удалить студента по индексу
+5. Изменить студента по индексу
+6. Получить индекс по имени
+7. Получить список студентов по первой букве</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли всех студентов</span>.</p>
