--- a/Урок 21-27. Строки. Списки/Python - PT25.html
+++ b/Урок 21-27. Строки. Списки/Python - PT25.html
@@ -147,16 +147,20 @@
       <div class="right-rect">
         <h2>Практическое Задание 25.3</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Внести доход/расход в отчёт
-          <br>2. Показать полную историю
-          <br>3. Показать историю по границам
-          <br>4. Завершить программу
+        <div class="console">
+          <pre><code>1. Внести доход/расход в отчёт
+2. Показать полную историю
+3. Показать историю по границам
+4. Завершить программу</code></pre>
+        </div>
         <p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает с консоли числа до тех пор, пока не введут пустую строку</span>. Все числа должны <span class="hl-text">помещаться в список</span>. После этого программа <span class="hl-text">возвращается в главное меню</span>.</p>
 
         <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">выводит в консоль данные из списка по следующему шаблону</span>:
-          <br><span class="number"><b>&ltиндекс&gt<span class="string">&ltслово доход/расход&gt</span>&ltчисло_как_есть&gt</b></span>
+        <div class="console">
+          <pre><code><индекс> <слово_доход/расход> <число_как_есть></code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли начальный индекс</span> и <span class="hl-text">конечный индекс</span>. Затем программа <span class="hl-text">выводит в консоль данные из списка в границах индексов включительно по тому же шаблону, что и выше</span>.</p>
