--- a/Урок 21-27. Строки. Списки/Python - PT27.html
+++ b/Урок 21-27. Строки. Списки/Python - PT27.html
@@ -238,19 +238,23 @@ my_list_7 = ["Teston", "Jim", ["Kate", "Arthur", ["Astrid", "Hiccup"], [True, Fa
       <div class="right-rect">
         <h2>Практическое Задание 27.5</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Поиск данных
-          <br>2. Добавление данных
-          <br>3. Удалить данные
-          <br>4. Показать все данные
-          <br>5. Завершить программу
+        <div class="console">
+          <pre><code>1. Поиск данных
+2. Добавление данных
+3. Удалить данные
+4. Показать все данные
+5. Завершить программу</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа показывает следующее:
-          <br>1. Поиск по имени
-          <br>2. Поиск по фамилии
-          <br>3. Поиск по средней оценке
-          <br>4. Вернуться
-          <br>5. Завершить программу
+        <div class="console">
+          <pre><code>1. Поиск по имени
+2. Поиск по фамилии
+3. Поиск по средней оценке
+4. Вернуться
+5. Завершить программу</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пунктов 1</span>-<span class="hl-text">3</span> программа <span class="hl-text">запрашивает с консоли имя/фамилию/среднюю оценку</span> и <span class="hl-text">указанные данные</span>. Если находит, то <span class="hl-text">все данные помещаются в новый список</span>, а потом <span class="hl-text">выводится в консоль</span>. Если данные не найдены, то <span class="hl-text">выводится в консоль</span> <span class="string"><b>"Не найдено."</b></span>.</p>
