--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -187,9 +187,11 @@
       <div class="right-rect">
         <h2>Домашнее Задание 28.1</h2>
         <p>У кинотеатра <span class="hl-text">"Посидим, посмотрим"</span> открылась возможность забронировать место на сессию. Реализуйте следующее меню:
-          <br>1. Показать места на сессию
-          <br>2. Забронировать место
-          <br>3. Завершить программу
+        <div class="console">
+          <pre><code>1. Показать места на сессию
+2. Забронировать место
+3. Завершить программу</code></pre>
+        </div>
         </p>
         <p>При выборе <span class="hl-text">пункта 1</span> программа должна <span class="hl-text">показать места следующим образом</span>:</p>
         <div class="console">
