--- a/Урок 28-34. Функции. Модули/Python - PT29.html
+++ b/Урок 28-34. Функции. Модули/Python - PT29.html
@@ -196,11 +196,13 @@
         <h2>Практическое Задание 29.3</h2>
         <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает последовательность элементов</span> и <span class="hl-text">необязательные начало</span> и <span class="hl-text">конец</span>. Функция должна <span class="hl-text">сформировать список из последовательности элементов от начала до конца включительно</span>. Затем функция должна <span class="hl-text">вернуть полученный список</span>.</p>
         <p>После этого реализуйте меню, которое будет использовать созданную функцию:
-          <br>1. Показать данные
-          <br>2. Ввести новые данные
-          <br>3. Сформировать список из данных
-          <br>4. Сделать срез из данных списка
-          <br>5. Завершить программу
+        <div class="console">
+          <pre><code>1. Показать данные
+2. Ввести новые данные
+3. Сформировать список из данных
+4. Сделать срез из данных списка
+5. Завершить программу</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли отдельно имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">день рождения</span>, <span class="hl-text">месяц рождения</span>, <span class="hl-text">год рождения</span>.</p>
