--- a/Урок 35-36. Сортировка. Поиск/Python - HW36.html
+++ b/Урок 35-36. Сортировка. Поиск/Python - HW36.html
@@ -194,10 +194,12 @@
       <div class="right-rect">
         <h2>Домашнее Задание 36.1</h2>
         <p>Реализуйте следующее меню:
-          <br>1. Показать всех сотрудников
-          <br>2. Показать всех сотрудников в отсортированном виде по имени в алфавитном порядке
-          <br>3. Показать всех сотрудников в отсортированном виде по возрасту по убыванию
-          <br>4. Добавить нового сотрудника
+        <div class="console">
+          <pre><code>1. Показать всех сотрудников
+2. Показать всех сотрудников в отсортированном виде по имени в алфавитном порядке
+3. Показать всех сотрудников в отсортированном виде по возрасту по убыванию
+4. Добавить нового сотрудника</code></pre>
+        </div>
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
