--- a/Урок 07-09. Введение в Python/Python - PT08.html
+++ b/Урок 07-09. Введение в Python/Python - PT08.html
@@ -149,11 +149,11 @@
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите температуру в Понедельник: <span class="input">18</span>
-Введите температуру в Вторник: <span class="input">20</span>
-Введите температуру в Среда: <span class="input">22</span>
+Введите температуру во Вторник: <span class="input">20</span>
+Введите температуру в Среду: <span class="input">22</span>
 Введите температуру в Четверг: <span class="input">21</span>
-Введите температуру в Пятница: <span class="input">19</span>
-Введите температуру в Суббота: <span class="input">20</span>
+Введите температуру в Пятницу: <span class="input">19</span>
+Введите температуру в Субботу: <span class="input">20</span>
 Введите температуру в Воскресенье: <span class="input">18</span>
 
 Средняя температура за неделю: 19.71°C</code></pre>
