--- a/Урок 03. Программное обеспечение ПК/Python - HW03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - HW03.html
@@ -111,7 +111,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.1</h2>
-        <p>Посчитайте общую минимальную мощность, которая потребуется для следующей сборки ПК:</p>
+        <p>Посчитайте общую минимальную мощность, которая потребуется для следующей сборки ПК:
           <br>— Процессор AMD Ryzen 7500f
           <br>— Видеокарта RTX 4070ti 12GB Zotac Trinity
           <br>— ОЗУ 32GB DDR5 6000 G.Skill Flare X5
