--- a/Урок 03. Программное обеспечение ПК/Python - HW03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - HW03.html
@@ -193,7 +193,7 @@
           <br><span class="hl-text">Storage:</span> Samsung 980 Pro 2 TB M.2-2280 PCIe 4.0 X4 NVME Solid State Drive
           <br><span class="hl-text">Storage:</span> Samsung 870 Evo 2 TB 2.5" Solid State Drive
           <br><span class="hl-text">Video Card:</span> MSI SUPRIM X GeForce RTX 4090 24 GB Video Card
-          <br><span class="hl-text">Power Supply:</span> Corsair SF750 750 W 80+ Platinum Certified Fully Modular SFX Power Supply
+          <br><span class="hl-text">Power Supply:</span> Deepcool PN650M 650 W 80+ Gold Certified Fully Modular ATX Power Supply
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
