--- a/Урок 10-14. Операторы ветвлений/Python - HW12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW12.html
@@ -269,7 +269,7 @@ else:
         </div>
         <h3>Консоль:</h3>
         <div class="console">
-          <pre><code>Человеку больше 21 года (Y/N): <span class="input">N</span>
+          <pre><code>Человеку больше 21 года (Y/N): <span class="input">Y</span>
 Опыт работы (в месяцах): <span class="input">36</span>
 Имеется сертификат (Y/N): <span class="input">Y</span>
 
