--- a/Урок 10-14. Операторы ветвлений/Python - HW14.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW14.html
@@ -319,7 +319,7 @@ number = randint(1000, 9999)  # Генерация случайного четы
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 14.3</h2>
-        <p><span class="hl-text">Teston Lebra</span> попросили написать программу, которая поможет HR-менеджерам определить уровень кандидата и давать некоторые комментарии по навыкам, если они низкие. Проверять нужно опыт работы (от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>10</b></span></code> лет - баллы соответственно), образование (специальное - <code><span class="number"><b>2</b></span></code> балла, базовое - <code><span class="number"><b>1</b></span></code> балл, отсутствует - <code><span class="number"><b>0</b></span></code> баллов), навыки (от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>8</b></span></code> баллов включительно). Полученные баллы нужно суммировать и проверять на уровень кандидата. <span class="hl-text">Teston Lebra</span> написал программу и отдал HR-менеджерам на пользование. Менеджеры провели несколько десятков собеседований, но заметили, что им очень часто попадаются средний и низкий уровни кандидатов, а также показывается только одна подсказка. <span class="hl-text">Исправьте программу, чтобы она работала корректно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> попросили написать программу, которая поможет HR-менеджерам определить уровень кандидата и давать некоторые комментарии по навыкам, если они низкие. Проверять нужно опыт работы (от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>10</b></span></code> лет - баллы соответственно), образование (специальное - <code><span class="number"><b>2</b></span></code> балла, базовое - <code><span class="number"><b>1</b></span></code> балл, отсутствует - <code><span class="number"><b>0</b></span></code> баллов), навыки (от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>8</b></span></code> баллов включительно). Из баллов по навыкам нужно получить средний балл. После этого средний балл нужно сложить со всеми баллами и проверять на уровень кандидата. <span class="hl-text">Teston Lebra</span> написал программу и отдал HR-менеджерам на пользование. Менеджеры провели несколько десятков собеседований, но заметили, что им очень часто попадаются средний и низкий уровни кандидатов, а также показывается только одна подсказка. <span class="hl-text">Исправьте программу, чтобы она работала корректно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
         <div class="console">
           <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
@@ -359,7 +359,7 @@ elif technical_skill < 5:
 elif leadership_skill < 3:
     print("- Не обладает лидерскими навыками")
 elif analytic_skill < 5:
-    print("- Слабый аналитические способности")
+    print("- Слабые аналитические способности")
 elif teamwork_skill < 4:
     print("- Работа в команде слабая")
 
