--- a/Урок 15-20. Циклы/Python - HW18.html
+++ b/Урок 15-20. Циклы/Python - HW18.html
@@ -243,11 +243,11 @@
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите количество дней: <span class="input">5</span>
-Введите темературу (1): <span class="input">25</span>
-Введите темературу (2): <span class="input">27.8</span>
-Введите темературу (3): <span class="input">26.9</span>
-Введите темературу (4): <span class="input">26.2</span>
-Введите темературу (5): <span class="input">24.1</span>
+Введите температуру (1): <span class="input">25</span>
+Введите температуру (2): <span class="input">27.8</span>
+Введите температуру (3): <span class="input">26.9</span>
+Введите температуру (4): <span class="input">26.2</span>
+Введите температуру (5): <span class="input">24.1</span>
 
 Средняя температура за 5 дней: 26</code></pre>
         </div>
