--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -233,7 +233,7 @@
         <div class="console">
           <pre><code>Введите стоимость корзины клиента: <span class="input">500</span>
 Введите количество дней непрерывной покупки: <span class="input">25</span>
-Клиент оставил положительный отзыв в текущем месяце (Y/N): <span class="input">N</span>
+Клиент оставил положительный отзыв в текущем месяце (Y/N): <span class="input">Y</span>
 ==============================================================
 Клиент накопил скидку в 15%.
 Применить скидку (Y/N): <span class="input">Y</span>
