--- a/Урок 15-20. Циклы/Python - HW16.html
+++ b/Урок 15-20. Циклы/Python - HW16.html
@@ -251,7 +251,7 @@
 Выберите действие: <span class="input">2</span>
 ===============================
 Введите расстояние (км.): <span class="input">20</span>
-Стоимость поездки: <span class="input">12</span>
+Стоимость поездки: 12
 ===============================
 1. Эконом класс (0.3 за 1 км.)
 2. Комфорт класс (0.6 за 1 км.)
