--- a/Урок 15-20. Циклы/Python - PT17.html
+++ b/Урок 15-20. Циклы/Python - PT17.html
@@ -278,11 +278,7 @@ range(9, 5, -3)</code></pre>
 Товары склада:
 1. Хлеб: 1100
 2. Молоко: 550
-3. Яйца: 2000
-
-Введите номер товара: <span class="input">...</span>
-Введите количество привоза выбранного товара: <span class="input">...</span>
-. . . . . . . . . . . . . . . . . . . . .</code></pre>
+3. Яйца: 2000</code></pre>
         </div>
       </div>
       <div class="right-rect">
