Updated HW10 - changed tasks 10.1 and 10.7.

--- a/Урок 10-14. Операторы ветвлений/Python - HW10.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW10.html
@@ -175,16 +175,32 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <code><span class="number"><b>2</b></span></code> числа</span> и <span class="hl-text">выводит в консоль меню</span> - найти максимальное или минимальное число. Затем программа <span class="hl-text">запрашивает с консоли выбор</span>. В зависимости от выбора программа <span class="hl-text">выводит в консоль результат</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли среднюю скорость автомобиля в км/ч</span>. Затем программа выводит в консоль меню:
+        <div class="console">
+          <pre><code>1. Определить время движения
+2. Определить расстояние</code></pre>
+        </div>
+        После этого программа <span class="hl-text">запрашивает с консоли выбор пункта</span>.</p>
+        <p>Выбор <span class="hl-text">пункта 1</span>:
+          <br>— <span class="hl-text">Запрашивает с консоли</span> расстояние в км.
+          <br>— Вычисляет затраченное время автомобиля на указанное расстояние.
+          <br>— <span class="hl-text">Выводит в консоль</span> <span class="string"><b>"На расстояние в <span class="number">&ltчисло&gt</span> км автомобиль со скоростью <span class="number">&ltчисло&gt</span> км/ч потратит часов: <span class="number">&ltчисло&gt</span>"</b></span>.
+        </p>
+        <p>Выбор <span class="hl-text">пункта 2</span>:
+          <br>— <span class="hl-text">Запрашивает с консоли</span> время в часах.
+          <br>— Вычисляет расстояние за указанное время.
+          <br>— <span class="hl-text">Выводит в консоль</span> <span class="string"><b>"За часов <span class="number">&ltчисло&gt</span> автомобиль со скоростью <span class="number">&ltчисло&gt</span> км/ч пройдёт км: <span class="number">&ltчисло&gt</span>"</b></span>
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
-          <pre><code>Введите первое число: <span class="input">10</span>
-Введите второе число: <span class="input">8</span>
-1. Определить максимальное число
-2. Определить минимальное число
+          <pre><code>Введите среднюю скорость автомобиля (км/ч): <span class="input">100</span>
+1. Определить время движения
+2. Определить расстояние
 Выберите действие: <span class="input">1</span>
 ================================
-Максимальное число: 10</code></pre>
+Введите расстояние (км): <span class="input">200</span>
+На расстояние в 200 км автомобиль со скоростью 100 км/ч потратит часов: 2
+</code></pre>
         </div>
       </div>
       <div class="right-rect">
@@ -263,6 +279,7 @@
       <div class="right-rect">
         <h2>Домашнее Задание 10.7</h2>
         <p>Напишите конвертер валют. Программа <span class="hl-text">выводит в консоль меню с выбором исходной валюты</span>, затем <span class="hl-text">запрашивает ввод с консоли выбора</span>. После этого программа <span class="hl-text">выводит в консоль меню с выбором целевой валюты</span>, затем <span class="hl-text">запрашивает ввод с консоли выбора</span>. Дальше программа <span class="hl-text">выводит в консоль что во что будет конвертироваться</span> и <span class="hl-text">курс конвертации</span>, а дальше <span class="hl-text">запрашивает с консоли сумму для конвертации</span>. Затем программа <span class="hl-text">выводит в консоль сумму конвертированной валюты</span>.</p>
+        <p>В начале программы создайте <code class="python"><b>3</b></code> переменные, которые будут хранить курсы конвертации - <code><b>AZN -&gt RUB</b></code>, <code><b>AZN -&gt USD</b></code>, <code><b>RUB -&gt USD</b></code>. Задайте им любой курс и используйте их в программе.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>1. AZN
@@ -270,9 +287,10 @@
 3. USD
 Выберите исходную валюту: <span class="input">1</span>
 =========================================
-1. RUB
-2. USD
-Выберите целевую валюту: <span class="input">1</span>
+1. AZN
+2. RUB
+3. USD
+Выберите целевую валюту: <span class="input">2</span>
 =========================================
 AZN -> RUB
 Курс: 54.40
